# Cities-Bad

./: .gitignore  CMakeLists.txt  CitiesBad.sln  dev.pdn
CitiesBad/: CitiesBad.vcxproj  CitiesBad.vcxproj.filters  imgui.ini
CitiesBad/assets/shaders/: test.frag.glsl  test.vert.glsl
CitiesBad/res/shaders/: test.vert.glsl
CitiesBad/src/: ExampleApp.cpp  GameLayer.cpp  GameLayer.h  main.cpp
CitiesBad/src/render/: Quad.cpp  Quad.h
CitiesBad/src/road/: Lane.cpp  Lane.h  Vertex.cpp  Vertex.h
CitiesBad/src/terrain/: Terrain.cpp  Terrain.h
CitiesBad/src/ui/: Camera.cpp  Camera.h
OpenGL-Core/: OpenGL-Core.vcxproj
OpenGL-Core/src/GLCore/Util/: OrthographicCamera.cpp
OpenGLCore/: CMakeLists.txt
OpenGLCore/include/: GLCore.h
OpenGLCore/include/GLCore/Core/: Application.cpp  Application.h
OpenGLCore/include/GLCore/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
OpenGLCore/include/GLCore/Util/: OrthographicCameraController.cpp
OpenGLCore/include/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
res/shaders/: depth.frag.glsl  depth.vert.glsl  terrain.frag.glsl  terrain.vert.glsl  test.frag.glsl  test.vert.glsl  test2.frag.glsl  test2.vert.glsl
